<resources>
    <string name="app_name">AmbuHelp</string>
    <string name="sign_in_to_your_account">Sign In to Your Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or_sign_in_with">OR SIGN IN WITH</string>
    <string name="sign_in">SIGN IN</string>
    <string name="other_methods">OTHER METHODS</string>
    <string name="didn_t_have_an_account_yet">Didn\'t have an account yet?</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_have_read_the">I have read the</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="search_hospital">SEARCH HOSPITAL</string>
    <string name="nearest_hospital">Nearest Hospital</string>
    <string name="nearest_hospital_address">Nearest Hospital Address</string>
    <string name="search_ambulance">SEARCH AMBULANCE</string>
    <string name="nearest_ambulance_location">Nearest Ambulance Location</string>
    <string name="nearest_ambulance">Nearest Ambulance</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="ambulance_s_name">Ambulance\'s Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="hospital_number">Hospital Number</string>
    <string name="bed_available">Bed Available</string>
    <string name="name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="sign_out">Sign Out</string>
</resources>